# tree-sitter-tek

./: CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-tek.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_tek/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterTek/: tek.h
bindings/swift/TreeSitterTekTests/: TreeSitterTekTests.swift
examples/: complete.tek  section.tek  sectiontest.ct  test.tek
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
