[package]
name = "tree-sitter-tek"
description = "The tek markup language used for Teksty"
version = "0.1.0"
authors = ["Allomanta"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "tek"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/allomanta/tree-sitter-tek"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25.1"
